# xdmfviewer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml  windows-installer-release.yml  windows-zip-release.yml
src/xdmfviewer/: __init__.py  __main__.py  app.py  cli.py  version.py
tests/: conftest.py  test_helpers.py  test_version.py
